--- a/src/main/resources/templates/movies/list.mustache
+++ b/src/main/resources/templates/movies/list.mustache
@@ -1,8 +1,9 @@
-<link rel="stylesheet" href="/css/movie.css" />
+<link rel="stylesheet" href="/css/movies.css" />
 {{> common/header }}
 <a href="/movies/new">등록하기</a>
 <a href="/movies?status=NOT_SHOWING">상영안함</a>
-<div class="container movie">
+
+<div class="container movies">
     <div class="movie-chart">
 
         <div class="tit">
