--- a/src/main/resources/static/css/mypage/pref.css
+++ b/src/main/resources/static/css/mypage/pref.css
@@ -21,22 +21,30 @@ form{
   display: block;
   font-size: 16px;
   font-weight: 600;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   color: #333;
 }
 
+.preference-arear{
+  display: flex;
+  gap: 5px;
+}
 /* 셀렉트 박스 */
 .custom-select-wrapper {
   position: relative;
-  max-width: 350px;
-  width: 100%;
   font-size: 14px;
 }
-
+.custom-select-wrapper.select-city{
+  width: 170px;
+}
+.custom-select-wrapper.select-cinema{
+  width: 100%;
+  max-width: 350px;
+}
 .custom-select {
   border: 1px solid #ccc;
   border-radius: 6px;
-  padding: 10px 12px;
+  padding: 10px 30px 10px 12px;
   background-color: #fff;
   cursor: pointer;
   position: relative;
@@ -55,6 +63,7 @@ form{
   background-size: contain;
 }
 
+
 .options {
   display: none;
   position: absolute;
@@ -69,7 +78,6 @@ form{
   overflow-y: auto;
   margin-top: 5px;
 }
-
 .option {
   padding: 10px;
   cursor: pointer;
@@ -104,14 +112,12 @@ form{
   font-size: 14px;
   transition: all 0.2s ease;
   user-select: none;
+  color: #333;
 }
-
-/* 체크된 상태 스타일 */
-.genre-item input[type="checkbox"]:checked + span,
-.genre-item input[type="checkbox"]:checked {
-  background-color: #693cee;
-  color: white;
-  border-color: #693cee;
+/* 체크된 경우 .checked 클래스 사용 */
+.genre-item.checked {
+  background-color: #b0e5eb;
+  border-color: #b0e5eb;
 }
 
 .genre-item input[type="checkbox"] {
@@ -122,6 +128,7 @@ form{
 .btn-group{
   display: flex;
   gap: 10px;
+  margin-top: 100px;
 }
 .btn {
   padding: 10px 18px;
