--- a/src/main/resources/templates/common/header.mustache
+++ b/src/main/resources/templates/common/header.mustache
@@ -72,8 +72,8 @@
             <a href="/movies">영화</a>
             <ul class="submenu">
               <div class="submenu-inner">
-                <li><a href="/movies/now">현재상영작</a></li>
-                <li><a href="/movies/soon">상영예정작</a></li>
+                <li><a href="/movies">현재상영작</a></li>
+                <li><a href="/movies?status=COMING_SOON">상영예정작</a></li>
               </div>
             </ul>
           </li>
