--- a/src/main/resources/static/css/movies.css
+++ b/src/main/resources/static/css/movies.css
@@ -6,9 +6,10 @@
     max-width: 1200px;
     margin: 0 auto;
     color: #222;
+    width: 1200px;
 }
 
-.movies {padding: 2.5rem 0;}
+.movie-chart {padding: 20px 0 3rem;}
 
 .input-wrap {
     border: 1px solid #ccc;
@@ -50,7 +51,7 @@ nav ul {
     align-items: center;
 }
 .movie-chart .tit .status-tab a.active {
-    color: #4320ab;
+    color: #006f7c;
         display: flex;
 }
 
@@ -68,21 +69,53 @@ nav ul {
 .movie-chart .movie-list {
     display: flex;
     flex-wrap: wrap;
-    gap: calc(13rem / 3);
+    row-gap: 3.125rem;
+    column-gap: calc(13rem / 3);
     width: 100%;
     padding: 1rem 0;
 }
 
+
 .movie-chart .movie-list .item {
     width: calc((100% - 13rem) / 4);
+    min-width: 238px;
 }
 
 .movie-chart .movie-list .item .main-image {
-    min-width: 248px;
     width: 100%;
     height:350px;
     border-radius: 20px;
     overflow: hidden;
+    position: relative;
+}
+.movie-chart .movie-list .item .main-image .over_box {
+    position: absolute;
+    background: rgba(0, 0, 0, .75);
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: .3s;
+    pointer-events: none;
+}
+
+.movie-chart .movie-list .item .main-image:hover .over_box {
+    opacity: 1;
+    pointer-events :auto;
+}
+
+.movie-chart .movie-list .item .main-image .over_box .inner {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.movie-chart .movie-list .item .main-image .over_box .inner a {
+    padding: .5rem 2rem;
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
 
 .movie-chart .movie-list .item .main-image img {
@@ -101,6 +134,9 @@ nav ul {
 .movie-chart .movie-list .item .item-tit h5 {
     font-size: 22px;
     font-weight: 500;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .movie-chart .movie-list .item .item-info {
@@ -142,11 +178,11 @@ nav ul {
 
 .movie-chart .movie-list .item .item-btn .reservation-btn {
     padding: 8px;
-    border: 1px solid #4320ab;
+    border: 1px solid #006f7c;
     display: flex    ;
     border-radius: 5px;
     height: 100%;
-    background-color: #4320ab;
+    background-color: #006f7c;
     flex: 2;
     color: #fff;
     font-weight: 500;
@@ -154,6 +190,23 @@ nav ul {
     justify-content: center;
     cursor:pointer;
     align-items: center;
+}
+.movie-chart  .more-btn-wrap {
+    padding-top: 2rem;
+}
+
+.movie-chart  .more-btn-wrap button {
+    width: 100%;
+    padding: .5rem 0;
+    border: 1px solid #ccc;
+    background: #fff;
+    cursor: pointer;
+    font-size: 15px;
+    display: flex    ;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    line-height: 1;
 }
 
 /* view */
@@ -186,7 +239,13 @@ nav ul {
     font-size: 22px;
     font-weight: 600;
 }
+.movie-cont {
+    line-height: 1.4;
+}
 
+.movie-cont b {
+    font: revert;
+}
 .movie-grade {
     display:inline-block;
     width: 23px;
