--- a/src/main/resources/templates/movies/movie-items-partial.mustache
+++ b/src/main/resources/templates/movies/movie-items-partial.mustache
@@ -1,9 +1,14 @@
-<!-- src/main/resources/templates/movies/movie-items-partial.mustache -->
 {{#movies}}
     <div class="item">
         <div class="item-wrap">
             {{#mainImageUrl}}
                 <div class="main-image">
+                    <div class="over_box">
+                        <div class="inner">
+                            <a href="/ticketing/{{movieId}}">예매하기</a>
+                            <a href="/movies/{{movieId}}">상세정보</a>
+                        </div>
+                    </div>
                     <img src="/images/movie/{{mainImageUrl}}" alt="{{title}}">
                 </div>
             {{/mainImageUrl}}
