--- a/src/main/resources/templates/seats/seatReservation.mustache
+++ b/src/main/resources/templates/seats/seatReservation.mustache
@@ -46,185 +46,29 @@
         <!-- 좌석 배치도 -->
         <div class="seat-map">
             <div class="screen-label">SCREEN</div>
+            {{#seatRowList}}
+                <div class="row" data-row="{{row}}">
+                    <span class="row-label">{{row}}</span>
+                    {{#seats}}
+                        {{#isGap}}
+                            <span class="seat-gap"></span>
+                        {{/isGap}}
+                        {{^isGap}}
+                            <span class="seat
+                     {{#isVip}}vip{{/isVip}}
+                                {{#isReserved}}reserved{{/isReserved}}
+                                {{#isDisabled}}disabled{{/isDisabled}}"
+                                  data-seat-id="{{seatId}}">
+                                {{seatNumber}}
+                            </span>
+                        {{/isGap}}
+                    {{/seats}}
+                </div>
+            {{/seatRowList}}
 
-            <div class="seat-rows">
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="A">
-                    <span class="row-label">A</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat vip">12</span>
-                    <span class="seat vip">13</span>
-                    <span class="seat vip">14</span>
-                    <span class="seat vip">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="B">
-                    <span class="row-label">B</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="C">
-                    <span class="row-label">C</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="D">
-                    <span class="row-label">D</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="E">
-                    <span class="row-label">E</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="F">
-                    <span class="row-label">F</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="G">
-                    <span class="row-label">G</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-                <!-- 좌석 행들 -->
-                <div class="row" data-row="H">
-                    <span class="row-label">H</span>
-                    <!-- 좌석들 -->
-                    <span class="seat">1</span>
-                    <span class="seat">2</span>
-                    <span class="seat">3</span>
-                    <span class="seat">4</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">5</span>
-                    <span class="seat">6</span>
-                    <span class="seat">7</span>
-                    <span class="seat">8</span>
-                    <span class="seat">9</span>
-                    <span class="seat">10</span>
-                    <span class="seat">11</span>
-                    <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
-                </div>
-            </div>
+
+
+
         </div>
     </div>
 
