--- a/src/main/resources/templates/movies/view.mustache
+++ b/src/main/resources/templates/movies/view.mustache
@@ -18,13 +18,13 @@
                            <h2 class="tit">{{title}}</h2>
                             <ul class="info1">
                                 <li>
-                                    <span class="date">
-                                        {{#releaseDate}}{{releaseDate}}개봉{{/releaseDate}}
+                                    <p class="date">
+                                        {{#releaseDate}}<span class="bold600 format-date">{{releaseDate}}</span> 개봉{{/releaseDate}}
                                         {{^releaseDate}}미정{{/releaseDate}}
-                                    </span>
+                                    </p>
                                 </li>
-                                <li><span class="time">{{runningTime}}</span>분</li>
-                                <li>{{ageRating}}</li>
+                                <li class="flex-center "><img src="https://www.lottecinema.co.kr/NLCHS/Content/images/icon/icon_clock_black.svg"><span class="time bold600 pl-5">{{runningTime}}</span>분</li>
+                                <li class="age">{{ageRating}}</li>
                             </ul>
                             <div class="info2">
                                 <p>감독: {{director}}</p>
@@ -34,21 +34,21 @@
                             <div class="info3">
                                 <div class="like">
                                     <h5>좋아요</h5>
-                                    <p>{{likesCount}}</p>
+                                    <span>{{likesCount}}</span>
                                 </div>
                             </div>
-                            <div class="info3 score">
+                            <div class="info4 score">
                                 <div class="rate">
-                                    <h5><span class="text-warning">★</span> 평점</h5>
+                                    <h5>실관람 평점</h5>
                                     <p><span class="rating">{{rating}}</span>%</p>
                                 </div>
                                 <div class="reservation">
                                     <h5>예매율</h5>
-                                    <p><span class="rating">{{reservationRate}}</span>%</p>
+                                    <p>n위(<span class="rating">{{reservationRate}}</span>%)</p>
                                 </div>
                                 <div class="audience">
-                                    <h5>관객수</h5>
-                                    <p>{{audienceCount}}명</p>
+                                    <h5>누적관객수</h5>
+                                    <p><span class="audience-counting">{{audienceCount}}</span>명</p>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                         </ul>
 
                         <ul class="tab_cont">
-                            <li class="movie-cont">
+                            <li class="on">
                                 <div class="inner">
                                     <p class="movie-cont">{{{content}}}</p>
                                     <h4>관람객 평점</h4>
@@ -76,16 +76,14 @@
                                             </div>
                                             <p class="mt-2"><span class="rating">{{positivePercentage}}</span>%의 관람객이 이 영화를 좋아했습니다.</p>
                                         </div>
-                                        <div class="col-md-6">
-                                            <!-- 리뷰 작성 버튼 모달 트리거로 변경 -->
-                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reviewModal" data-movie-id="{{movieId}}">
-                                                리뷰 작성하기
-                                            </button>
-                                        </div>
                                     </div>
 
                                     <!-- 리뷰 목록 표시 부분 추가 -->
                                     <hr>
+                                    <!-- 리뷰 작성 버튼 모달 트리거로 변경 -->
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reviewModal" data-movie-id="{{movieId}}">
+                                        리뷰 작성하기
+                                    </button>
                                     <h4>관람객 리뷰 ({{reviews.size}})</h4>
                                     {{#reviews}}
                                         <div class="card mb-3">
@@ -116,48 +114,73 @@
                                     {{/reviews}}
                                 </div>
                             </li>
-
-                            <li class="movie-review">
-                                리뷰만 띄울 곳
-                            </li>
-
-                            <li class="movie-video-img">
-                                예고편, 스틸컷
-                            </li>
-
-                        </ul>
-
-                        {{#videoUrl}}
-                            <hr>
-                            <h4>예고편</h4>
-                            <div class="embed-responsive embed-responsive-16by9 mb-3">
-                                <iframe class="embed-responsive-item" src="{{videoUrl}}" allowfullscreen
-                                        style="width:100%; height:400px;"></iframe>
-                            </div>
-                        {{/videoUrl}}
-
-                        {{#subImageUrls}}
-                            <hr>
-                            <h4>서브 이미지</h4>
-                            <div class="detail-images-gallery">
-                                <div class="detail-image-item mb-3">
-                                    <img src="/images/movie/{{subImageUrls}}" class="img-fluid rounded" alt="서브 이미지">
-                                </div>
-                            </div>
-                        {{/subImageUrls}}
-
-                        {{#detailImageUrls}}
-                            <hr>
-                            <h4>상세 이미지</h4>
-                            <div class="detail-images-gallery">
-                                {{#detailImageUrlList}}
-                                    <div class="detail-image-item mb-3">
-                                        <img src="/images/movie/{{.}}" class="img-fluid rounded" alt="상세 이미지">
+                            <li class="">
+                                <!-- 리뷰 목록 표시 부분 추가 -->
+                                <hr>
+                                <!-- 리뷰 작성 버튼 모달 트리거로 변경 -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reviewModal" data-movie-id="{{movieId}}">
+                                    리뷰 작성하기
+                                </button>
+                                <h4>관람객 리뷰 ({{reviews.size}})</h4>
+                                {{#reviews}}
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <div class="d-flex justify-content-between">
+                                                <h5 class="card-title">
+                                                    {{#isPositive}}
+                                                        <span class="badge bg-success"><i class="bi bi-hand-thumbs-up"></i> 좋았어요</span>
+                                                    {{/isPositive}}
+                                                    {{^isPositive}}
+                                                        <span class="badge bg-danger"><i class="bi bi-hand-thumbs-down"></i> 별로였어요</span>
+                                                    {{/isPositive}}
+                                                </h5>
+                                                <small class="text-muted format-date">{{createdAt}}</small>
+                                            </div>
+                                            <p class="card-text">{{{content}}}</p>
+                                            <div class="d-flex justify-content-end">
+                                                <a href="/reviews/delete/{{reviewId}}?movieId={{movieId}}" class="btn btn-sm btn-outline-danger"
+                                                onclick="return confirm('정말로 이 리뷰를 삭제하시겠습니까?');">삭제</a>
+                                            </div>
+                                        </div>
                                     </div>
-                                {{/detailImageUrlList}}
-                            </div>
-                        {{/detailImageUrls}}
-
+                                {{/reviews}}
+                                {{^reviews}}
+                                    <div class="alert alert-info">
+                                        아직 등록된 리뷰가 없습니다. 첫 번째 리뷰를 작성해보세요!
+                                    </div>
+                                {{/reviews}}
+                            </li>
+                            <li class="">
+                                {{#videoUrl}}
+                                    <hr>
+                                    <h4>예고편</h4>
+                                    <div class="embed-responsive embed-responsive-16by9 mb-3">
+                                        <iframe class="embed-responsive-item" src="{{videoUrl}}" allowfullscreen
+                                                style="width:100%; height:400px;"></iframe>
+                                    </div>
+                                {{/videoUrl}}
+                                {{#subImageUrls}}
+                                    <hr>
+                                    <h4>서브 이미지</h4>
+                                    <div class="detail-images-gallery">
+                                        <div class="detail-image-item mb-3">
+                                            <img src="/images/movie/{{subImageUrls}}" class="img-fluid rounded" alt="서브 이미지">
+                                        </div>
+                                    </div>
+                                {{/subImageUrls}}
+                                {{#detailImageUrls}}
+                                    <hr>
+                                    <h4>상세 이미지</h4>
+                                    <div class="detail-images-gallery">
+                                        {{#detailImageUrlList}}
+                                            <div class="detail-image-item mb-3">
+                                                <img src="/images/movie/{{.}}" class="img-fluid rounded" alt="상세 이미지">
+                                            </div>
+                                        {{/detailImageUrlList}}
+                                    </div>
+                                {{/detailImageUrls}}
+                            </li>
+                        </ul>
                         <hr>
                         등록일: <span class="format-date">{{createdAt}}</span><br>
                         수정일: <span class="format-date">{{updatedAt}}</span>
@@ -273,14 +296,14 @@
 
         // ISO 형식의 날짜 문자열에서 'T'를 기준으로 분할하여 날짜 부분만 추출
         const datePart = dateString.split('T')[0];
-        return datePart;
-        }
+        return datePart.replaceAll('-', '.');
+    }
 
-        // .format-date 클래스를 가진 모든 요소 찾기
-        const dateElements = document.querySelectorAll('.format-date');
+    // .format-date 클래스를 가진 모든 요소 찾기
+    const dateElements = document.querySelectorAll('.format-date');
 
-        // 각 요소의 텍스트 내용을 변환
-        dateElements.forEach(function(element) {
+    // 각 요소의 텍스트 내용을 변환
+    dateElements.forEach(function(element) {
         const originalDate = element.textContent;
         if (originalDate && originalDate.trim() !== '') {
           element.textContent = formatDate(originalDate);
