비회원 로그인 처리중

--- a/src/main/resources/templates/member/guestLogin.mustache
+++ b/src/main/resources/templates/member/guestLogin.mustache
@@ -36,6 +36,7 @@
         {{/error}}
 
         <button type="button" class="btn btn-primary" id="guestLoginBtn" disabled>비회원 로그인</button>
+        <input type="hidden" name="redirect" value="{{redirect}}">
     </form>
 
     <div class="login-links">
